# JIMP_excercises

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome.h
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab2/: CMakeLists.txt
lab2/XorCypherBreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab2/array2D/: CMakeLists.txt  array2D.cpp  array2D.h  main.cpp
lab2/polybius/: CMakeLists.txt  main.cpp  polybius.cpp  polybius.h
lab3/ccounter/: CCounter.cpp  CCounter.h
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp  odbuduj_regexem.txt
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
tests/exampletest/: CMakeLists.txt
tests/lab2test/: Array2dStep4Test.cpp
tests/lab3test/: todo.txt
tests/lib/gtest-1.8.0/googletest/include/gtest/: gtest.h
